[workspace]
resolver = "2"
members = [
    "arkworks4",
    "arkworks3",
    "arkworks3-sppark",
    "arkworks3-sppark-wlc",
    "blst",
    "blst-sppark",
    "kzg",
    "kzg-bench",
    "mcl/kzg",
    "mcl/kzg-bench",
    "zkcrypto",
    "constantine",
    "rust-eth-kzg-benches",
]


[profile.bench]
lto = "thin"
