[workspace]
resolver = "2"
members = [
    "arkworks5",
    "arkworks4",
    "arkworks3",
    "arkworks3-sppark",
    "arkworks3-sppark-wlc",
    "blst",
    "blst-sppark",
    "kzg",
    "kzg-bench",
    "mcl",
    "zkcrypto",
    "constantine",
    "rust-eth-kzg-benches",
    "msm-benches"
]

[profile.bench]
lto = "thin"
