[package]
name = "kzg"
version = "0.1.0"
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
# bls12_381 = {'git' = 'https://github.com/dfaranha/bls12_381.git'}
blst = {'git' = 'https://github.com/supranational/blst.git'}
pairing = "0.21.0"
bls12_381 = "0.6.0"
num-bigint = "0.4"
rand = "0.8"