[package]
name = "rust-kzg-arkworks-cuda"
version = "0.1.0"
edition = "2021"

[dependencies]
sppark = "0.1.6"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-381 = { version = "0.3.0" }
blst = "0.3.11"

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"

[dev-dependencies]
criterion = "0.5.1"
kzg = { path = "../kzg" }
rand = "0.8.5"
