[package]
name = "rust-kzg-arkworks"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { path = "../kzg" }
kzg-bench = { path = "../kzg-bench" }
blst = {'git' = 'https://github.com/supranational/blst.git'}
ark-ff = { version = "^0.4.2", default-features = false }
ark-ec = { version = "^0.4.2", default-features = false }
ark-poly = {version = "^0.4.2", default-features = false }
ark-poly-commit = "0.4.0"
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
merkle_light = "0.4.0"
rand = "0.8"
ark-std = { version = "^0.4.0", default-features = false }
rayon = { version = "1", optional = true }
num_cpus = "1.16.0"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std"]
print-trace = ["ark-std/print-trace"]
parallel = ["std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon"]
minimal-spec = ["kzg/minimal-spec", "kzg-bench/minimal-spec"]

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "lincomb"
harness = false
