[package]
name = "rust-kzg-arkworks"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { path = "../kzg" }
kzg-bench = { path = "../kzg-bench" }
blst = {'git' = 'https://github.com/supranational/blst.git'}
ark-std = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.2", default-features = false }
ark-ec = { version = "^0.4.2", default-features = false }
ark-poly = { version = "^0.4.2", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.4.2", default-features = false }
rand = "0.8"
hex = "0.4.2"
# Needed for ckzg extern C interface
libc = { version = "0.2.148", default-features = false }
rayon = { version = "1.6.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std"]
print-trace = ["ark-std/print-trace"]
parallel = [
"std", "dep:rayon", "kzg/parallel",
"ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel"
]

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "lincomb"
harness = false
