[package]
name = "rust-kzg-arkworks3-sppark"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = { workspace = true }
sppark = { workspace = true }
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-381 = { version = "0.3.0" }

[build-dependencies]
cc = { workspace = true }
which = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
kzg = { workspace = true }
rand = "0.8.5"

[[bench]]
name = "lincomb"
harness = false
