[package]
name = "rust-kzg-arkworks3"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.11"
kzg = { path = "../kzg", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false, features = [ "asm" ] }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.3.0", default-features = false }
hex = "0.4.3"
rand = { version = "0.8.5", optional = true }
libc = { version = "0.2.148", default-features = false }
rayon = { version = "1.8.0", optional = true }
rust-kzg-arkworks3-sppark = { path = "../arkworks3-sppark", version = "0.1.0", optional = true }
rust-kzg-arkworks3-sppark-wlc = { path = "../arkworks3-sppark-wlc", version = "0.1.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { path = "../kzg-bench" }
rand = { version = "0.8.5" }

[features]
default = [
    "std",
    "rand"
]
std = [
    "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", 
    "kzg/std",
    "libc/std"
]
parallel = [
"dep:rayon", "kzg/parallel",
"ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel"
]
rand = [
    "dep:rand",
    "kzg/rand",
]
sppark = [
    "dep:rust-kzg-arkworks3-sppark",
    "kzg/sppark"
]
sppark_wlc = [
    "dep:rust-kzg-arkworks3-sppark-wlc",
    "kzg/sppark"
]

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "lincomb"
harness = false
