[package]
name = "rust-kzg-arkworks4"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { workspace = true }
ark-std = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.2", default-features = false, features = [ "asm" ] }
ark-ec = { version = "^0.4.2", default-features = false }
ark-poly = { version = "^0.4.2", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.4.2", default-features = false }
hex = { workspace = true }
rand = { version = "0.8.5", optional = true }
libc = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { workspace = true }
rand = { version = "0.8.5" }

[features]
default = [
    "std",
    "rand",
    "bgmw",
]
std = [
    "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", 
    "kzg/std",
    "libc/std"
]
parallel = [
"dep:rayon", "kzg/parallel",
"ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel"
]
rand = [
    "dep:rand",
    "kzg/rand",
]
bgmw = [
    "kzg/bgmw"
]
arkmsm = [
    "kzg/arkmsm"
]
c_bindings = []

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "eip_7594"
harness = false

[[bench]]
name = "lincomb"
harness = false
