[package]
name = "blst_from_scratch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = { 'git' = 'https://github.com/supranational/blst.git' }
rand = "0.8.4"
rand_pcg = "0.3.1"
kzg = { path = "../kzg" }
kzg-bench = { path = "../kzg-bench" }
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.3.5"


[[bench]]
name = "das"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false
