[package]
name = "blst_from_scratch"
version = "0.1.0"
edition = "2018"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[dependencies]
blst = { 'git' = 'https://github.com/supranational/blst.git' }
rand = "0.8.4"
rand_pcg = "0.3.1"
kzg = { path = "../kzg" }
kzg-bench = { path = "../kzg-bench" }
rayon = { version = "1.5.1", optional = true }
once_cell = "1.4.0"

[dev-dependencies]
criterion = "0.2.11"

[features]
parallel = [ "rayon" ]

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false
