[package]
name = "rust-kzg-blst-sppark"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = { workspace = true }
sppark = { workspace = true }

[build-dependencies]
cc = { workspace = true }
which = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
kzg = { workspace = true }
rand = "0.8.5"
rust-kzg-blst = { workspace = true }

[[bench]]
name = "lincomb"
harness = false
