[package]
name = "rust-kzg-blst"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: Use `std` feature once https://github.com/supranational/blst/pull/150 or similar upstreamed
blst = { git = 'https://github.com/supranational/blst.git' }
kzg = { path = "../kzg", default-features = false }
libc = { version = "0.2.148", default-features = false }
num_cpus = { version = "1.16.0", optional = true }
once_cell = { version = "1.18.0", features = ["critical-section"], default-features = false }
rand = { version = "0.8.5", optional = true }
rayon = { version = "1.8.0", optional = true } 
smallvec = { version = "1.11.1", features = ["const_generics"] }
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { path = "../kzg-bench" }
rand = "0.8.5"

[features]
default = [
    "std",
    "rand",
    "blst-default"
]
std = [
    "kzg/std",
    "libc/std",
    "once_cell/std",
]
rand = [
    "dep:rand",
    "kzg/rand",
]
parallel = [
    "dep:rayon",
    "dep:num_cpus",
]

# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
blst-default = ["blst/default"]

# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
blst-portable = ["blst/portable"]

# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
blst-force-adx = ["blst/force-adx"]

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "lincomb"
harness = false
