[package]
name = "rust-kzg-blst"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = { workspace = true }
kzg = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true, features = ["critical-section"] }
rand = { version = "0.8.5", optional = true }
rayon = { workspace = true, optional = true } 
smallvec = { workspace = true, features = ["const_generics"] }
hex = { workspace = true, features = ["alloc"] }
rust-kzg-blst-sppark = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { workspace = true }
rand = "0.8.5"

[features]
default = [
    "std",
    "rand",
    "bgmw",
]
std = [
    "hex/std",
    "kzg/std",
    "libc/std",
    "once_cell/std",
]
rand = [
    "dep:rand",
    "kzg/rand",
]
parallel = [
    "dep:rayon",
    "kzg/parallel"
]
bgmw = [
    "kzg/bgmw"
]
arkmsm = [
    "kzg/arkmsm"
]
sppark = [
    "dep:rust-kzg-blst-sppark",
    "kzg/sppark"
]
c_bindings = []

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "eip_7594"
harness = false

[[bench]]
name = "lincomb"
harness = false

[[bench]]
name = "trusted_setup"
harness = false
