[package]
name = "ckzg"
version = "0.1.0"
edition = "2018"

[dependencies]
kzg = { path = "../kzg" }
kzg-bench = { path = "../kzg-bench" }
rand = "0.4"

[dev-dependencies]
criterion = "0.2.11"

[features]
parallel = []

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk20"
harness = false

[[bench]]
name = "recover"
harness = false
