[package]
name = "ckzg"
version = "0.1.0"
edition = "2018"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[dependencies]
kzg = { path = "../kzg" }
kzg-bench = { path = "../kzg-bench" }
rand = "0.8.5"
libc = "0.2.137"

[dev-dependencies]
criterion = "0.4.0"

[features]
parallel = []

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "eip_4844"
harness = false
