[package]
name = "rust-kzg-constantine"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.11"
kzg = { path = "../kzg", default-features = false }
libc = { version = "0.2.148", default-features = false }
once_cell = { version = "1.18.0", features = ["critical-section"], default-features = false }
constantine-ethereum-kzg = { 'git' = 'https://github.com/mratsim/constantine.git', rev = "3ed6eeac4f0a9b0092bb4234b61768dfde25cdbe" } # branch constantine-public-sys
constantine-sys = { 'git' = 'https://github.com/mratsim/constantine.git', rev = "3ed6eeac4f0a9b0092bb4234b61768dfde25cdbe" }  # branch constantine-public-sys
constantine-core = { 'git' = 'https://github.com/mratsim/constantine.git', rev = "3ed6eeac4f0a9b0092bb4234b61768dfde25cdbe" }  # branch constantine-public-sys
rand = { version = "0.8.5", optional = true }
rayon = { version = "1.8.0", optional = true }
smallvec = { version = "1.11.1", features = ["const_generics"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
arbitrary = "1.4.2"

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { path = "../kzg-bench" }
rand = "0.8.5"

[features]
default = [
    "std",
    "rand",
    "bgmw",
]
std = [
    "hex/std",
    "kzg/std",
    "libc/std",
    "once_cell/std",
]
rand = [
    "dep:rand",
    "kzg/rand",
]
parallel = [
    "dep:rayon",
    "kzg/parallel"
]
constantine_msm = []
bgmw = [
    "kzg/bgmw"
]
arkmsm = [
    "kzg/arkmsm"
]
wbits = [
    "kzg/wbits"
]
c_bindings = []

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "eip_4844_constantine"
harness = false

[[bench]]
name = "eip_4844_constantine_no_conv"
harness = false

[[bench]]
name = "lincomb"
harness = false
