[package]
name = "kzg_from_scratch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = { 'git' = 'https://github.com/supranational/blst.git' }
rand = "0.8.4"
rand_pcg = "0.3.1"
kzg = { path = "../kzg" }
kzg-bench = { path = "../kzg-bench" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "fft"
harness = false