[package]
name = "kzg-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { path = '../kzg' }
rand = "0.8.5"
criterion = "0.5.1"
serde_yaml = "0.9.17"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.2"
pathdiff = "0.2.1"
libc = "0.2.149"

[features]
minimal-spec = ["kzg/minimal-spec"]
