[package]
name = "kzg-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { workspace = true }
rand = "0.8.5"
criterion = "0.5.1"
serde_yaml = { workspace = true }
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
hex = { workspace = true }
pathdiff = { workspace = true }
libc = { workspace = true }
