[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.11"
sha2 = { version = "0.10.6", default-features = false }
num_cpus = { version = "1.16.0", optional = true }
rayon = { version = "1.8.0", optional = true } 
threadpool = { version = "^1.8.1", optional = true }
siphasher = { version = "1.0.0", default-features = false }
icicle-bls12-381 = { git = "https://github.com/ArtiomTr/icicle.git", rev = "2942ad9f9894119f0204325e08ddb55b8a8de227", version = "1.9.1", optional = true }
icicle-core = { git = "https://github.com/ArtiomTr/icicle.git", rev = "2942ad9f9894119f0204325e08ddb55b8a8de227", version = "1.9.1", optional = true }
icicle-cuda-runtime = { git = "https://github.com/ArtiomTr/icicle.git", rev = "2942ad9f9894119f0204325e08ddb55b8a8de227", version = "1.9.1", optional = true }

[features]
default = [
    "rand",
    "std",
]
parallel = [
    "std",
    "dep:rayon",
    "dep:num_cpus",
    "dep:threadpool"
]
std = [
    "sha2/std",
    "siphasher/std"
]
rand = []
arkmsm = []
bgmw = []
cuda = [
    "parallel",
    "dep:icicle-bls12-381",
    "dep:icicle-core",
    "dep:icicle-cuda-runtime"
]
