[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
num_cpus = { workspace = true, optional = true }
rayon = { workspace = true, optional = true } 
threadpool = { workspace = true, optional = true }
siphasher = { workspace = true }

[features]
default = [
    "rand",
    "std",
]
parallel = [
    "std",
    "dep:rayon",
    "dep:num_cpus",
    "dep:threadpool"
]
std = [
    "sha2/std",
    "siphasher/std"
]
rand = []
arkmsm = []
bgmw = []
sppark = []
