[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
num_cpus = { version = "1.16.0", optional = true }
rayon = { version = "1.8.0", optional = true }
threadpool = { version = "^1.8.1", optional = true }
siphasher = { version = "1.0.0", default-features = false }
hashbrown = "0.15.2"

[features]
default = [
    "rand",
    "std",
]
parallel = [
    "std",
    "dep:rayon",
    "dep:num_cpus",
    "dep:threadpool"
]
std = [
    "sha2/std",
    "siphasher/std"
]
rand = []
arkmsm = []
bgmw = []
bos_coster = []
sppark = []
wbits = []
